Fixed header width issue on iPhone Safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,9 @@ header {
     background: #333;
     color: white;
     padding: 1em 0;
+    width: 100%;
+    max-width: 100%;
+    overflow: hidden;
 }
 
 /* Navbar container */
